# cannon_cuda_compression

./: .gitmodules  CMakeLists.txt  README.md  cannon_comp.cpp  cannon_no_comp.cpp  cannon_out_1024_1_2.cpp  cudaMatrixMultiply.cu  jobscript_cannon.sh  matrix_functions.h  ndzip_api.cc  ndzip_api.h
src/: cannon_comp.cpp  cudaMatrixMultiply.cu  cudaMatrixMultiply.h  matrix_functions.h  ndzip_api.h
